@@ -9,6 +9,8 @@ apport (1.9.3-0ubuntu5) UNRELEASED; urgency=low
 
   [ Martin Pitt ]
   * debian/control: Update Vcs-Bzr: for lucid branch.
+  * data/package-hooks/source_linux.py: Add interactive questionaire, thanks
+    Leann Ogasawara! (LP: #444672)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 23 Oct 2009 21:28:48 +0100
 
